...
    );
  }

  @override
  Widget buildField({required bool autofocus}) {
    return TextField(
      key: const Key('bioField'),
      decoration: InputDecoration(
        border: InputBorder.none,
        hintText: ProfileConsts.bioDefaultText,
        hintStyle: TextStyle(
          color: Colors.grey,
          fontSize: 14,
...
    );
  }

  @override
  Widget buildField({required bool autofocus}) {
    return TextField(
      key: const Key('displayUnameField'),
      decoration: InputDecoration(
        border: InputBorder.none,
        counterText: '',
        isDense: true,
        contentPadding: EdgeInsets.zero,
        hintText: ProfileConsts.emptyDisplayUnameText,
...
                  height: 80,
                  child: ClipOval(
                    child: FittedBox(
                    fit: BoxFit.cover,
                    clipBehavior: Clip.hardEdge,
                      child: ImageFade(
                        key: const Key('profilePic'),
                        image: _showFile ? FileImage(_image) : bgImage,
                        placeholder: Container(
                          width: 80,
                          height: 80,
                          color: Colors.black,
                        ),
...
